# rust-game-of-life

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml  rust.yml
data/: game_pentadecathlon.txt
game_of_life/: Cargo.toml
game_of_life/src/: cli.rs  game.rs  main.rs  tui_renderer.rs
game_of_life/src/game/: cell.rs  game_board.rs  renderer.rs
tui/: Cargo.toml
tui/src/: components.rs  lib.rs  lowlevel.rs
tui/src/components/: border.rs  canvas.rs  count.rs  text_label.rs
xy_utils/: Cargo.toml
xy_utils/src/: lib.rs
